--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "us-states-api-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "engines": {
+    "node": "^16.0.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.0.0",
     "express": "^4.21.2",
     "mongoose": "^8.14.2",
     "uuid": "^11.1.0"
